WordPress NPCs: Added wp_* uncategorized tags; removed "SUCCESS" message from end.

--- a/npcs/wordpress_1st_draft_one_big_file.yaml
+++ b/npcs/wordpress_1st_draft_one_big_file.yaml
@@ -396,6 +396,8 @@ npc:
   uncategorized:
   - ful-picture: 611
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794416
+  - _wp_desired_post_slug: thane-gravelfist
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -793,6 +795,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794416
+  - _wp_desired_post_slug: stella-of-hilltop
   - ful-picture: 606
 ---
 #
@@ -1194,6 +1198,8 @@ npc:
   uncategorized:
   - ful-picture: 309
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794416
+  - _wp_desired_post_slug: lorne-stronghammer
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -1605,6 +1611,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: ezio-rzlathe
+  - _wp_trash_meta_time: 1611794416
   - _wp_trash_meta_status: publish
 ---
 #
@@ -2007,6 +2015,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: tristeth-mulholland
+  - _wp_trash_meta_time: 1611794416
   - _wp_trash_meta_status: publish
 ---
 #
@@ -2417,6 +2427,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: zirrashka-brrek-zer-rash-kah-burrek
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -2820,6 +2832,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: mamoon-zhoul
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -3223,6 +3237,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: kaz-lamosatzi
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -3619,6 +3635,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: ook
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -4031,6 +4049,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: yeet-cargohlik
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -4431,6 +4451,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: babita-babs
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -4832,6 +4854,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: beach
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -5231,7 +5255,9 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
+  - _wp_desired_post_slug: coalwater
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -5631,7 +5657,9 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: rainbow
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794406
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -6033,6 +6061,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: nokumi
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -6431,6 +6461,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: rahim
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -6824,6 +6856,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: wendigola
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -7220,6 +7254,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: scarback
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -7614,6 +7650,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: eleanorious-murr
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -8010,6 +8048,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: lord-cal-manterius
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -8404,6 +8444,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794406
+  - _wp_desired_post_slug: giza-ter
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -8797,6 +8839,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: irtano-the-brawnkeep
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -9191,6 +9235,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: gruda-wheatsheaf-combfavor
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -9584,6 +9630,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: khedoldosh-the-lost
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -9977,6 +10025,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: aeureek-potomach
+  - _wp_trash_meta_time: 1611794406
   - _wp_trash_meta_status: publish
 ---
 #
@@ -10369,6 +10419,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: chloe-middleton
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -10762,6 +10814,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: fot
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -11156,6 +11210,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_desired_post_slug: albrecht-mukht
+  - _wp_trash_meta_time: 1611794399
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -11549,6 +11605,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794399
+  - _wp_desired_post_slug: teaghan-forestlight
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -11942,6 +12000,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: eldaren-brightfoot
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -12339,6 +12399,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: kraven-holtdmoore
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -12736,6 +12798,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794399
+  - _wp_desired_post_slug: the-pennymore-con
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -13135,6 +13199,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794399
+  - _wp_desired_post_slug: captain-wheeler
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -13532,6 +13598,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: moss
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -13925,6 +13993,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_desired_post_slug: scheuchzeri
+  - _wp_trash_meta_time: 1611794399
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -14328,6 +14398,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: princess-ateh
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -14729,6 +14801,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_desired_post_slug: samuel-cohen
+  - _wp_trash_meta_time: 1611794399
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -15128,6 +15202,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794399
+  - _wp_desired_post_slug: abrinet-of-dire-dawa-riley
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -15525,6 +15601,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: yasloh-brain
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -15920,6 +15998,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: nagata
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -16319,6 +16399,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: fuchsia
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -16716,6 +16798,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: dharja
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -17115,6 +17199,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: lovecarp
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -17526,6 +17612,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: reina
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -17940,6 +18028,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: yemik-rothoar
+  - _wp_trash_meta_time: 1611794399
   - _wp_trash_meta_status: publish
 ---
 #
@@ -18353,6 +18443,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: figus-figora
+  - _wp_trash_meta_time: 1611794390
   - _wp_trash_meta_status: publish
 ---
 #
@@ -18765,6 +18857,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794390
+  - _wp_desired_post_slug: draake
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -19179,6 +19273,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794390
+  - _wp_desired_post_slug: dr-enkephalin
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -19596,6 +19692,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: odinson-ironbeard
   - _wp_trash_meta_status: publish
 ---
 #
@@ -20009,6 +20107,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: urreeek
+  - _wp_trash_meta_time: 1611794389
   - _wp_trash_meta_status: publish
 ---
 #
@@ -20422,6 +20522,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: oorruk-the-seeker
   - _wp_trash_meta_status: publish
 ---
 #
@@ -20834,6 +20936,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: leejya
+  - _wp_trash_meta_time: 1611794389
   - _wp_trash_meta_status: publish
 ---
 #
@@ -21246,6 +21350,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: dakeelek
+  - _wp_trash_meta_time: 1611794389
   - _wp_trash_meta_status: publish
 ---
 #
@@ -21663,6 +21769,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: aur-salleek
+  - _wp_trash_meta_time: 1611794389
   - _wp_trash_meta_status: publish
 ---
 #
@@ -22075,6 +22183,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: eikenziel-umbara
+  - _wp_trash_meta_time: 1611794389
   - _wp_trash_meta_status: publish
 ---
 #
@@ -22491,6 +22601,8 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: nothuriel-oathbreaker
   - _wp_trash_meta_status: publish
 ---
 #
@@ -22904,7 +23016,9 @@ npc:
   # Optional.
   #
   uncategorized:
+  - _wp_desired_post_slug: aezodel
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794389
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -23317,6 +23431,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: yufreni-dulask
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -23735,6 +23851,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: gothenni-vosk
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -24148,6 +24266,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: hathunti
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -24563,6 +24683,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: varun-bakerfield
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -24976,6 +25098,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: hogarrk
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -25388,6 +25512,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: ahktoma
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -25800,6 +25926,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: baruvo
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -26211,6 +26339,8 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
+  - _wp_trash_meta_time: 1611794389
+  - _wp_desired_post_slug: noel
 ---
 #
 # Preliminary fields that describe this overall file:
@@ -26633,6 +26763,5 @@ npc:
   #
   uncategorized:
   - _wp_trash_meta_status: publish
-
-SUCCESS converting WordPress XML file(s) to YAML.
-
+  - _wp_trash_meta_time: 1612198171
+  - _wp_desired_post_slug: andrel-nightfoot-2
