WordPress NPCs: fixed missing IDs for Varay Flamesworth and Fingers Dozen.

--- a/npcs/wordpress_1st_draft_one_big_file.yaml
+++ b/npcs/wordpress_1st_draft_one_big_file.yaml
@@ -8358,7 +8358,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: 
+  id: varay_flamesworth
 
   #
   # The name of the submitter (your name).
@@ -8778,7 +8778,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: 
+  id: fingers_dozen
 
   #
   # The name of the submitter (your name).
