--- a/npcs/Delores_Dumas.yaml
+++ b/npcs/Delores_Dumas.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: Irini_Dumas
+  id: Delores_Dumas
 
   #
   # The name of the submitter (your name).
@@ -103,7 +103,7 @@ metadata:
   # E.g. "2021-12-31"
   #      "2021-12-31 23:59:59"
   #
-  date: "2021-03-05"
+  date: "2021-03-03"
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Irini Dumas
+  name: Delores Dumas
 
   #
   # The NPC artwork.
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: Young Adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Half-Devil
+    race: Human
 
     #
     # The sub-race can be anything.
@@ -196,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: Path of Beauty
+    sub-race: N/A
 
     #
     # Pronouns (case insensitive):
@@ -215,7 +215,9 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Cult Leader
+    - Prisoner
+    - Offering
+    - Prophet
 
     #
     # D & D classes (case insensitive):
@@ -223,7 +225,7 @@ npc:
     # - artificer
     # - barbarian
     # - bard
-    # - bloodhunter
+    # - blood hunter
     # - cleric
     # - druid
     # - fighter
@@ -261,7 +263,7 @@ npc:
     #
     # Required.
     #
-    subclass: Death Domain
+    subclass: Madness Domain
 
     #
     # Class level.
@@ -270,7 +272,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 17
+    level: 20
 
     #
     # Alignments (case insensitive):
@@ -286,7 +288,7 @@ npc:
     #
     # Required.
     #
-    alignment: chaotic evil
+    alignment: Neutral
 
     #
     # Alignment tendencies:
@@ -295,9 +297,8 @@ npc:
     # Optional.
     #
     tendencies:
-    - TEMPLATE
-    - TEMPLATE
-    - TEMPLATE
+    - N/A
+
 
     #
     # Languages the character speaks
@@ -312,8 +313,8 @@ npc:
     #
     languages:
     - Common
-    - Abyssal
     - Infernal
+    - Abyssal
 
     #
     # Factions:
@@ -335,24 +336,25 @@ npc:
     #
     factions:
     - id: Dumas_Family
-      name: The Dumas Family
-      role: Cult Leader and Recruiter
-      
+      name: Dumas Family
+      role: Offering
+
+
     #
     # Adjectives or other tags that can be used for searching.
     #
     # Optional.  0 or more.
     #
     adjectives:
-    - Seductive
-    - Manipulative
-    - Deceitful
+    - Mad
+    - Creepy
+    - Intense
 
   improv:
 
     #
     # Introduction:
-    # A block of text the DM can read out to he party.
+    # A block of text the DM can read out to the party.
     # A hooded dwarf darts in front of your party and blows a loud, shrill whistle, splitting your ears, before he runs away laughing.
     #
     # Required.
@@ -361,7 +363,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction: A beautiful pale slender woman meets your gaze from across the market, a gesture beckons you to join her... forever
+    introduction: A scrawny, wild-eyed, messy-haired woman scrambles out of the bushes "Helpmehelpmehelpmehelp!! Too late they're coming!" 
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -372,7 +374,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   Pale-skinned and fine-featured with sharp green eyes, long red hair and wait... are those small horns... maybe
+    appearance:   Emaciated with wild auburn hair, piercing violet eyes, barely dressed except a shift, scratches and bruises everywhere
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -383,12 +385,12 @@ npc:
     # etc.
     #
     # Required.
-    # Max 120 characters
+    # Max 120 characters.
     #
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Yes my lovelies, dinner is served", "The family could use a handsome face like yours", "And I taste just as sweet"
+    expressions:  "Help", "They're coming", "Nonononononononono!!!!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -401,7 +403,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   Maintains intense eye contact, twirls her hair around her finger
+    mannerisms:   mumbles erratically, rubs her wrists, rocks back and forth
 
   acting:
     #
@@ -411,7 +413,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      Serving her master and growing her "family"
+      Who knows
       
     #
     # Passions:
@@ -420,7 +422,8 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      serving her master and her "children"     
+      Escape
+      
     #
     # Vulnerabilities:
     #
@@ -428,7 +431,7 @@ npc:
     # ???Maximum length???
     #
     vulnerabilities: |
-      she's completely insane
+      She is inflicted with Indefinite Madness. Her madness is not curable by any means
       
     #
     # Secrets:
@@ -436,23 +439,23 @@ npc:
     # Required.
     # ???Maximum length???
     #
-    secrets: Irini is married to her half-brother. Her father is the Greater Devil that is the family's patron
-      
+    secrets: |
+      She is the daughter of Anastasia Dumas. Her husband was murdered by her son and she was forced to bear a daughter with a Greater Devil. None of her spells can effect any of her blood relatives.
       
   #
   # The D & D stats block:
   # All integers.
   #
   stats:
-    armour-class: 20
-    hit-points: 197
-    speed: 30ft walking
-    str: 17
-    dex: 12
-    con: 22
-    int: 14
-    wis: 24
-    cha: 20
+    armour-class: 16
+    hit-points: 213
+    speed: 40
+    str: 8
+    dex: 23
+    con: 19
+    int: 9
+    wis: 21
+    cha: 18
 
   #
   # Special characteristics.
@@ -463,52 +466,45 @@ npc:
   #
   specialties:
     skills:
- - Cleric Abilities:
+    - Cleric Abilities:
     Spellcasting: 
-Cantrips: Guidance, Light, Resistance, Sacred Flame, Thaumaturgy
-1st Level: Bane, Command, Destroy Water, Inflict Wounds
-2nd Level: Zone of Truth, Hold Person, Spiritual Weapon
-3rd Level: Bestow Curse, Speak with Dead, Dispel Magic
-4th Level: Banishment, Locate Creature, Control Water
-5th Level: Raise Dead, Insect Plague, Dispel Good
-6th Level: Create Undead, Harm
-7th Level: Fire Storm, Plane Shift
-8th Level: Anti-magic Field
-9th Level: Astral Projection
+Cantrips: Thaumaturgy, Primal Savagery, Prestidigitation, Mind Sliver, Toll of the Dead
+1st Level: Arms of Hadar, Bane, Faerie Fire, Sleep, Id Insinuation
+2nd Level: Augury, Tasha's Mind Whip, Mind Spike
+3rd Level: Counterspell, Hunger of Hadar, Psionic Blast
+4th Level: Compulsion, Confusion, Divination
+5th Level: Scrying, Synaptic Static, Temporal Shunt
+6th Level: Psychic Crush, Otto's Irresistible Dance
+7th Level: Forcecage, Create Undead
+8th Level: Reality Break
+9th Level: Psychic Scream
 Channel Divinity: Turn Undead, Destroy Undead 
 Divine Intervention: Can call her patron to intervene on her behalf
 
-- Death Domain Abilities: Proficient with Knives and Torture Implements, Reaper, Touch of Death, Inescapable Destruction, Divine Strike, Improved Reaper 
+- Madness Domain Abilities: Divine Hallucinations, Gift of Madness, Dread Whispers, Crazed Stumbling, Potent Spellcasting, Already Mad 
   Spellcasting:
-Cantrips: Toll The Dead
-1st Level: False Life, Ray of Sickness
-3rd Level: Blindness/Deafness, Ray of Enfeeblement
-5th Level: Animate Dead, Vampiric Touch
-7th Level: Blight, Death Ward
-9th Level: Antilife Shell, Cloudkill
+Cantrips: Vicious Mockery
+1st Level: Dissonant Whispers, Tasha's Hideous Laughter
+3rd Level: Crown of Madness, Phantasmal Force
+5th Level: Fear, Incite Self-Harm
+7th Level: Phantasmal Killer, Staggering Smite
+9th Level: Modify Memory, Phantasmal Plunge
 
-- Half-Devil Abilities: Darkvision, Fire Resistant, Proficient in Persuasion, Can cast Mass Charm once per long rest using Charisma as her spellcasting DC
     special-abilities: 
-Feats: Actor, Inspiring Leader, Observant, War Caster, Shadow Touched (Invisibility and Cause Fear)
-Legendary Resistance: (3/Day), If Irini Dumas fails a saving throw she can choose to succeed instead 
-Legendary Actions: Irini Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
-                   Irini Dumas regains spent Legendary Actions at the start of her turn
-Devils Portal: Irini Dumas can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
-Devils Tongue: Irini Dumas casts Charm Person using Charisma as her spellcasting DC
-Devils Children: Irini Dumas can cast Gate, opening a portal to summon up to 5 lesser devils and/or minor undead to join the fight     
+Feats: Indefinite Madness, Contortionist, Eldritch Adept, 
+Legendary Resistance: (3/Day), If Delores Dumas fails a saving throw she can choose to succeed instead. Delores is completely immune to Psychic Damage and Charms 
+Legendary Actions: Delores Dumas can take 3 Legendary Actions. Randomly choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Delores Dumas 
+                   regains spent Legendary Actions at the start of her turn
+Devils Portal: Delores Dumas can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
+Touch of Madness: Delores Dumas touch one person within range and the must make a wisdom savign throw equal to her spellcasting DC or roles two results on the Short-Term Madness Table lasting until the end of their next turn
+Devils Children: Delores Dumas can cast Gate, opening a portal to summon up to 5 lesser devils
     attacks: |
-      Spellcasting
-      Legendary Actions
+      Various psychic spell attacks
     combat-tactics: |
-      Irini will do her best not to have to fight, she prefers sneak attacks and seduction if possible. Failing that she will someone her "children" to fight while she escapes  
-      
+      Delores has no real combat strategy and generally just responds randomly to outside stimuli
     special-equipment:
-    - Charm of Attraction
-    - Staff of Charming
-    - Black Heart Dagger
-    - Talisman of Ultimate Evil
-    - Ring of Regeneration
-
+    - Dimensional Shackles - These function as the dimensional shackles from the DMG but also function as her arcane focus allowing her to spellcast without and other components
+    
   profile:
 
     #
@@ -519,11 +515,17 @@ Devils Children: Irini Dumas can cast Gate, opening a portal to summon up to 5 l
     # No length limit for now.
     #
     background-story: |
-      Irini Dumas is the wife and half-sister of Nicodeamus Dumas and eldest grandaughter of Anastasia Dumas. She is Nicodeamus' second in command and the primary recruiter for the family. 
-      She is also the child of a union between Anastasia'a only daughter and the family's patron Devil. She is the high priestess of the family and helps her grandmother with all of the 
-      family rites and ceremonies dedicated to her father. She also has several children of her own with Nicodeamus most of whom have some degree of her devil heritage. In addition to that, she 
-      also has her "children", a group of lesser devils and minor undead (skeletons, zombies, ghouls, Scarecrows, poes, etc.). She is also responsible for recruiting initiates into the family, 
-      training new inductees and sacrificing those that don't make the cut. 
+      Delores Dumas is the Daughter of Anastasia Dumas and mother of Nicodeamus and Irini Dumas. Delores grew up under her mother's cruel thumb and was prone to rebellion. At the age of 19 she met Saul Branstock and soon 
+      became pregnant, giving birth to her first child, Nicodeamus. Upon his birth, he was immediately taken from her by her grandmother and Saul helped her flee from her family. Her and Saul lived happily for many years 
+      though she always missed her son. One day a young familiar stranger arrived at their home. This stranger proceeded to put her in chains, gun down her husband and burn down their home. On their way back to the family 
+      home Delores was horrified to learn that this cold-hearted youth was in fact, Nicodeamus, all grown up. This event was the first large blow to her sanity. Her vicious son tortued and tormented her the entire way back 
+      to the ancestral family home. Once she was home, the family kept her locked and chained away in the basement shrine to their master. After several months chained in solitude, Anastasia offered up her daughter as tribute 
+      to the family patron. The devil took Delores to his realm and impregnanted her, shattering her mind completely and irrivocably. Upon her return, now thoroughly mad, Delores gave birth to a daughter, half human, half 
+      devil. Anastasia named her Irini and promised her to Nicodeamus. In her madness, the horrifying things she has experienced have also given her a kind of clarevoyance and has made her a prophet of sorts. She regularly 
+      has vision, omens and portents of things to come and events happening far away. Because of this, the family has kept her alive and prisoner in their sanctum. Delores frequently escapes from her prison, often at the at 
+      the expense of her own health, and often leads the rest of the family on a merry chace, but is always captured again and brought back to her prison. Anastasia also uses Delores' blood as a regular offering to the family 
+      patron, each time giving more of her soul to the master.
+      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -533,12 +535,12 @@ Devils Children: Irini Dumas can cast Gate, opening a portal to summon up to 5 l
     # No length limit for now.
     #
     personality: |
-      Irini Dumas is a drop dead gorgeous waife of a woman. Her pale, freckled face is silhouetted by long, flowing deep red hair. Her fine features are the kind that catch the attention of men and women alike. 
-      Tiny horns peak out from the top of her forehead, the only visable sign of her hellish heritage. Always dressed in long, flowing, black gowns, she always looks fantastic. Her weapon of choice is seduction 
-      and manipulation, and she is a master of both. Her beauty doesn't hurt at all, but her persuasive abilities and her magic skills, blessed by her father, make her a dangerous package. In addition to that, 
-      she is a zealot, masochist and full on psychopath. However, despite al of this, in her own way she is a devoted mother to her children and to her "Children". While she does her absolute best not to do her 
-      fighting herself, she will absolutely wade fully into battle to defend her children.
-     
+      Delores Dumas is always manic, disheveled and glassy-eye. Her red hair is always a mess and she is barely clothed, basically wearing a dirty gray long nightshirt. She always has her hands bound in manacles keep her from 
+     that double any kind of magical travel, but also double as her spellcasting focus allowing her to cast spells without any other spell components. Delores is quite mad and barely coherent. In her more lucid moments she 
+     tries to escape from her family, but is always brought back. At best, she speaks in riddles, at worst, in complete gibberish. Because of her broken mind, she cannot be charmed or contorlled in any way and is immune to 
+     psychic damage. Delores isn't particularly aggressive, more just frantic. She will not attack anyone or anything unless she is directly attacked herself, but due to her mania, she will unwittingly cast spells such as 
+     Tasha's Hideous Laughter, Fear, or Otto's Irresistable Dance on random targets in her vacinity. If she is directly attacked she will respond with the full force of her psychic magic. Unfortunately for her, because of 
+     her "special" relationship with the Dumas Family's Patron, none of her magic has any effect on her blood relatives. Everyone else, including non-blood related family, is fair game forher power.
   #
   # Content that does not get displayed, but could be useful
   # to humans.  Includes review comments, notes about what to
